syntax = "proto3";

package shortener;

option go_package = "shortener/proto";

message ShortURL {
  string short_url = 1;
}

message OriginalURL {
  string original_url = 1;
}

message CorrelationID {
  string correlation_id = 1;
}

message Link {
  ShortURL short = 1;
  OriginalURL orig = 2;
}

message BatchLink {
  CorrelationID id = 1;
  ShortURL short = 2;
  OriginalURL orig = 3;
}

message OriginalLink {
  OriginalURL orig = 1;
  bool deleted = 2;
}

message BatchLinks {
  repeated BatchLink links = 1;
}

message AddLinkJSONRequest {
  string link = 1;
}

message AddLinkJSONResponse {
  int32 code = 1;
  string result = 2;
}

message GetStatsResponse {
  int32 code = 1;
  int32 urls = 2;
  int32 users = 3;
}

message RequestBatchJSON {
  CorrelationID id = 1;
  OriginalURL orig = 2;
}

message ResponseBatchJSON {
  CorrelationID id = 1;
  ShortURL short = 2;
}

message AddBatchRequest {
  repeated RequestBatchJSON links = 1;
}

message AddBatchResponse {
  int32 code = 1;
  repeated ResponseBatchJSON links = 2;
}

message AddLinkRequest {
  OriginalURL link = 1;
}

message AddLinkResponse {
  int32 code = 1;
  ShortURL short  = 2;
}

message DeleteLinkRequest {
  repeated CorrelationID ids = 1;
}

message DeleteLinkResponse {
  int32 code = 1;
}

message GetUserLinksRequest {
  // empty request body
}

message GetUserLinksResponse {
  int32 code = 1;
  repeated Link links = 2;
}

message GetOriginalByShortRequest {
  ShortURL short = 1;
}

message GetOriginalByShortResponse {
  int32 code = 1;
  OriginalLink link = 2;
}

message GetStatsRequest {
  // empty request body
}

message PingRequest {
  // empty request body
}

message PingResponse {
  int32 code = 1;
}

service Shortener {
  // HandlerBatchPOST (/api/shorten/batch)
  rpc AddBatch(AddBatchRequest) returns (AddBatchResponse);
  // HandlerJSONPOST (/api/shorten)
  rpc AddLinkJSON(AddLinkJSONRequest) returns (AddLinkJSONResponse);
  // HandlerPOST
  rpc AddLink(AddLinkRequest) returns (AddLinkResponse);
  // HandlerUseStorageDELETE (/api/user/urls)
  rpc DeleteLink(DeleteLinkRequest) returns (DeleteLinkResponse);
  // HandlerUserStorageGET (/api/user/urls)
  rpc GetUserLinks(GetUserLinksRequest) returns (GetUserLinksResponse);
  // HandlerGET (/{ID})
  rpc GetOriginalByShort(GetOriginalByShortRequest) returns (GetOriginalByShortResponse);
  // HandlerStats (/api/internal/stats)
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  // HandlerPing (/ping)
  rpc Ping(PingRequest) returns (PingResponse);
}